touch support for cat wrap lines public links

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,9 @@
       </header>
 
       <main>
-        <p>My public links (they open in new tabs)</p>
+        <p class="multiline">
+          <span>My public links</span>&nbsp;<span>(they open in new tabs)</span>
+        </p>
 
         <ul>
           <li>
