--- a/src/index.html
+++ b/src/index.html
@@ -160,22 +160,6 @@
     </div>
 
     <script>
-      const catElement = document.getElementById("cat")
-
-      let catText = ""
-      fetch("/cat.txt")
-        .then((response) => response.text())
-        .then((foreignText) => {
-          catText = foreignText
-        })
-
-      let catHappyText = ""
-      fetch("/cat-happy.txt")
-        .then((response) => response.text())
-        .then((foreignText) => {
-          catHappyText = foreignText
-        })
-
       fetch("https://api.ipify.org/")
         .then((response) => response.text())
         .then((ip) => {
@@ -183,21 +167,41 @@
           ipAddressElement.innerText = ip
         })
 
+      const catElement = document.getElementById("cat")
+
       const catHappy = (event) => {
         event.preventDefault()
         catElement.classList.add("grab")
-        catElement.innerText = catHappyText
+        catElement.innerText = String.raw` ,_     _
+ |\\_,-~/
+ /      |    ,--.
+(  ʌ  ʌ )   / ,-'
+ \  _T_/-._( (
+ /         ${"`"}. \
+|         _  \ |
+ \ \ ,  /      |
+  || |-_\__   /
+ ((_/${"`"}(____,-'`
+      }
+
+      const catNormal = (event) => {
+        event.preventDefault()
+        catElement.classList.remove("grab")
+        catElement.innerText = String.raw` ,_     _
+ |\\_,-~/
+ / _  _ |    ,--.
+(  @  @ )   / ,-'
+ \  _T_/-._( (
+ /         ${"`"}. \
+|         _  \ |
+ \ \ ,  /      |
+  || |-_\__   /
+ ((_/${"`"}(____,-'`
       }
 
       catElement.addEventListener("mousedown", catHappy, { passive: true })
       catElement.addEventListener("touchstart", catHappy, { passive: true })
       catElement.addEventListener("touchmove", catHappy, { passive: true })
-
-      const catNormal = (event) => {
-        event.preventDefault()
-        catElement.classList.remove("grab")
-        catElement.innerText = catText
-      }
 
       catElement.addEventListener("mouseup", catNormal, { passive: true })
       catElement.addEventListener("mouseleave", catNormal, { passive: true })
